Refactor JudgeApprovalResolverTest and SendOrderContestedAboutToSubmitHandlerTest to remove redundant null initializations